# nrpe

./: Makefile.am  Makefile.in  README.rst  config.h.in  configure  configure.ac
debian/: NEWS  README.Debian  README.source  changelog  check_nrpe.cfg  control  copyright  dirs  docs  nagios-nrpe-plugin.install  nagios-nrpe-server.default  nagios-nrpe-server.init  nagios-nrpe-server.install  nagios-nrpe-server.manpages  nagios-nrpe-server.postrm  nagios-nrpe-server.preinst  rules  watch
debian/patches/: 00list  01_nodevrandom-and-docoptions.dpatch  02_nrpe.cfg_local-include.dpatch  03_support_nrpe.d.dpatch  04_weird_output.dpatch  05_pid_privileges.dpatch  06_pid_directory.dpatch
include/: common.h  dh.h  nrpe.h  utils.h
sample-config/: nrpe.cfg.in
src/: Makefile.am  Makefile.in  check_nrpe.c  nrpe.c  utils.c
